--- a/bonus/index.html
+++ b/bonus/index.html
@@ -32,10 +32,13 @@
             </div><!-- /.container -->
         </nav>
         <div id="jumbo" class="container-fluid centra">
-            <div class="row">
-                <div class="col-xs-12">
-                    <h2>START BOOTSTRAP</h2>
-                    <p>GRAPHIC ARTIST - WEB DESIGNER - ILLUSTRATOR</p>
+            <div class="container">
+                <div class="row">
+                    <div class="col-xs-12">
+                        <h2>START BOOTSTRAP</h2>
+                        <div class="glyphicon glyphicon-star"></div>
+                        <p>GRAPHIC ARTIST - WEB DESIGNER - ILLUSTRATOR</p>
+                    </div>
                 </div>
             </div>
         </div>
@@ -44,6 +47,7 @@
                 <div class="row">
                     <div class="col-xs-12 centra">
                         <h2>PORTFOLIO</h2>
+                        <div class="glyphicon glyphicon-star"></div>
                     </div>
                 </div>
                 <div class="row">
@@ -62,16 +66,17 @@
                 <div class="row">
                     <div class="col-xs-12 centra">
                         <h2>ABOUT</h2>
+                        <div class="glyphicon glyphicon-star"></div>
                     </div>
                 </div>
                 <div class="row">
                     <div class="col-xs-12 col-md-6">
-                        <div class="right">
+                        <div class="extra-padding-left">
                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
                         </div>
                     </div>
                     <div class="col-xs-12 col-md-6">
-                        <div class="left">
+                        <div class="extra-padding-right">
                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
                         </div>                    </div>
                 </div>
@@ -84,28 +89,36 @@
             <div class="container">
                 <div class="col-xs-12 centra">
                     <h2>CONTACT ME</h2>
+                    <div class="glyphicon glyphicon-star"></div>
                 </div>
                 <form>
-                    <div class="form-group">
+                    <div class="form-group extra-padding-left">
                         <label for="exampleInputEmail1">Email address</label>
                         <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Email">
+                        <button type="submit" class="btn btn-default">Download</button>
                     </div>
-
-                    <button type="submit" class="btn btn-default">Submit</button>
                 </form>
             </div>
         </section>
         <footer class="container-fluid">
             <div class="container">
                 <div class="row">
-                    <div class="col-xs-12 col-md-4">
-
+                    <div class="col-xs-12 col-md-4 centra">
+                        <h3>LOCATION</h3>
+                        <p>2215 John Daniel Drive Clark, MO 54243</p>
                     </div>
-                    <div class="col-xs-12 col-md-4">
+                    <div class="col-xs-12 col-md-4 centra">
+                        <h3>AROUND THE WEB</h3>
+                        <div class="">
 
+                        </div>
                     </div>
-                    <div class="col-xs-12 col-md-4">
-
+                    <div class="col-xs-12 col-md-4 centra">
+                        <h3>ABOUT FREELANCER</h3>
+                        <p>
+                            Freelance is a free to use, open source Bootstrap theme
+                            created by <a href="#">Start Bootstrap</a>.
+                        </p>
                     </div>
                 </div>
             </div>
