--- a/bonus/index.html
+++ b/bonus/index.html
@@ -18,7 +18,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="#">START BOOTSTRAP</a>
+                    <a class="navbar-brand" href="#"><strong>START BOOTSTRAP</strong></a>
                 </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -81,7 +81,7 @@
                         </div>                    </div>
                 </div>
                 <div class="row centra">
-                    <button class="btn btn-default" type="submit">Button</button>
+                    <button class="btn btn-default" type="submit">Download</button>
                 </div>
             </div>
         </section>
@@ -93,9 +93,19 @@
                 </div>
                 <form>
                     <div class="form-group extra-padding-left">
-                        <label for="exampleInputEmail1">Email address</label>
-                        <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Email">
-                        <button type="submit" class="btn btn-default">Download</button>
+                        <label for="name-field">Name</label>
+                        <input type="text" id="name-field">
+                        <hr>
+                        <label for="email-field">Email address</label>
+                        <input type="email" id="email-field">
+                        <hr>
+                        <label for="phone-numb">Telephone Number</label>
+                        <input type="tel" id="phone-numb">
+                        <hr>
+                        <label for="message-content">Message</label>
+                        <textarea type="text" id="message-content"></textarea>
+                        <hr>
+                        <button type="submit" class="btn btn-default">Send</button>
                     </div>
                 </form>
             </div>
@@ -126,7 +136,7 @@
         <div id="copyright" class="container-fluid">
             <div class="row">
                 <div class="col-xs-12 centra">
-                    <p>Copyright</p>
+                    <p>Copyright Francesco Viterbo 2020</p>
                 </div>
             </div>
         </div>
