completed layout, missing color on navbar and burger

--- a/bonus/index.html
+++ b/bonus/index.html
@@ -35,6 +35,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-xs-12">
+                        <img id="avatar" src="images/icons8-homer-simpson.svg" alt="">
                         <h2>START BOOTSTRAP</h2>
                         <div class="glyphicon glyphicon-star"></div>
                         <p>GRAPHIC ARTIST - WEB DESIGNER - ILLUSTRATOR</p>
@@ -51,13 +52,37 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-xs-12 col-md-6 col-lg-4">.col-md-4</div>
-                    <div class="col-xs-12 col-md-6 col-lg-4">.col-md-4</div>
-                    <div class="col-xs-12 col-md-6 col-lg-4">.col-md-4</div>
+                    <div class="col-xs-12 col-md-6 col-lg-4">
+                        <div class="skill-image">
+                            <img src="images/icons8-casa-arryn.svg" alt="">
+                        </div>
+                    </div>
+                    <div class="col-xs-12 col-md-6 col-lg-4">
+                        <div class="skill-image">
+                            <img src="images/icons8-casa-greyjoy.svg" alt="">
+                        </div>
+                    </div>
+                    <div class="col-xs-12 col-md-6 col-lg-4">
+                        <div class="skill-image">
+                            <img src="images/icons8-casa-stark.svg" alt="">
+                        </div>
+                    </div>
                     <div class="clearfix visible-xs-block visible-lg-block"></div>
-                    <div class="col-xs-12 col-md-6 col-lg-4">.col-md-4</div>
-                    <div class="col-xs-12 col-md-6 col-lg-4">.col-md-4</div>
-                    <div class="col-xs-12 col-md-6 col-lg-4">.col-md-4</div>
+                    <div class="col-xs-12 col-md-6 col-lg-4">
+                        <div class="skill-image">
+                            <img src="images/icons8-skyrim.svg" alt="">
+                        </div>
+                    </div>
+                    <div class="col-xs-12 col-md-6 col-lg-4">
+                        <div class="skill-image">
+                            <img src="images/icons8-foresta-512.png" alt="">
+                        </div>
+                    </div>
+                    <div class="col-xs-12 col-md-6 col-lg-4">
+                        <div class="skill-image">
+                            <img src="images/castel-sant-angelo.svg" alt="">
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
@@ -92,7 +117,7 @@
                     <div class="glyphicon glyphicon-star"></div>
                 </div>
                 <form>
-                    <div class="form-group extra-padding-left">
+                    <div class="form-group extra-padding-left extra-padding-right">
                         <label for="name-field">Name</label>
                         <input type="text" id="name-field">
                         <hr>
@@ -119,8 +144,19 @@
                     </div>
                     <div class="col-xs-12 col-md-4 centra">
                         <h3>AROUND THE WEB</h3>
-                        <div class="">
-
+                        <div class="contact-icons centra">
+                            <div class="contact-icon">
+                                <img src="images/icons8-f-di-facebook.svg" alt="">
+                            </div>
+                            <div class="contact-icon">
+                                <img src="images/icons8-google-plus.svg" alt="">
+                            </div>
+                            <div class="contact-icon">
+                                <img src="images/icons8-twitter.svg" alt="">
+                            </div>
+                            <div class="contact-icon">
+                                <img src="images/icons8-linkedin-2.svg" alt="">
+                            </div>
                         </div>
                     </div>
                     <div class="col-xs-12 col-md-4 centra">
