--- a/bonus/index.html
+++ b/bonus/index.html
@@ -2,10 +2,12 @@
 <html lang="it" dir="ltr">
     <head>
         <meta charset="utf-8">
-        <title></title>
+        <title>Start Bootstrap</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="shortcut icon" type="image/x-icon" href="images/icons8-bootstrap.svg" />
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
         <link rel="stylesheet" href="css/style.css">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     </head>
     <body>
         <nav class="navbar navbar-fixed-top">
@@ -14,9 +16,7 @@
                 <div class="navbar-header">
                     <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
                         <span class="sr-only">Toggle navigation</span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
+                        <img src="images/menu.svg" alt="">
                     </button>
                     <a class="navbar-brand" href="#"><strong>START BOOTSTRAP</strong></a>
                 </div>
@@ -172,7 +172,7 @@
         <div id="copyright" class="container-fluid">
             <div class="row">
                 <div class="col-xs-12 centra">
-                    <p>Copyright Francesco Viterbo 2020</p>
+                    <p>Copyright &copy; Francesco Viterbo 2020</p>
                 </div>
             </div>
         </div>
