Spostato files da cartella "Bonus" alla main directory. Completato

--- a/index.html
+++ b/index.html
@@ -2,84 +2,87 @@
 <html lang="it" dir="ltr">
     <head>
         <meta charset="utf-8">
-        <title></title>
+        <title>Start Bootstrap</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="shortcut icon" type="image/x-icon" href="images/icons8-bootstrap.svg" />
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
         <link rel="stylesheet" href="css/style.css">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     </head>
     <body>
-        <nav class="navbar navbar-default">
+        <nav class="navbar navbar-fixed-top">
             <div class="container">
             <!-- Brand and toggle get grouped for better mobile display -->
                 <div class="navbar-header">
                     <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
                         <span class="sr-only">Toggle navigation</span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
+                        <img src="images/menu.svg" alt="">
                     </button>
-                    <a class="navbar-brand" href="#">Brand</a>
+                    <a class="navbar-brand" href="#"><strong>START BOOTSTRAP</strong></a>
                 </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                    <ul class="nav navbar-nav">
-                        <li class="active"><a href="#">Link <span class="sr-only">(current)</span></a></li>
-                        <li><a href="#">Link</a></li>
-                        <li class="dropdown">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
-                            <ul class="dropdown-menu">
-                                <li><a href="#">Action</a></li>
-                                <li><a href="#">Another action</a></li>
-                                <li><a href="#">Something else here</a></li>
-                                <li role="separator" class="divider"></li>
-                                <li><a href="#">Separated link</a></li>
-                                <li role="separator" class="divider"></li>
-                                <li><a href="#">One more separated link</a></li>
-                            </ul>
-                        </li>
-                    </ul>
-                    <form class="navbar-form navbar-left">
-                        <div class="form-group">
-                            <input type="text" class="form-control" placeholder="Search">
-                        </div>
-                        <button type="submit" class="btn btn-default">Submit</button>
-                    </form>
                     <ul class="nav navbar-nav navbar-right">
-                        <li><a href="#">Link</a></li>
-                        <li class="dropdown">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
-                            <ul class="dropdown-menu">
-                                <li><a href="#">Action</a></li>
-                                <li><a href="#">Another action</a></li>
-                                <li><a href="#">Something else here</a></li>
-                                <li role="separator" class="divider"></li>
-                                <li><a href="#">Separated link</a></li>
-                            </ul>
-                        </li>
+                        <li><a href="#portfolio">PORTFOLIO</a></li>
+                        <li><a href="#about">ABOUT</a></li>
+                        <li><a href="#contact">CONTACT</a></li>
                     </ul>
                 </div><!-- /.navbar-collapse -->
             </div><!-- /.container -->
         </nav>
         <div id="jumbo" class="container-fluid centra">
-            <div class="row">
-                <div class="col-xs-12">
-                    <h1>Hello, world!</h1>
-                    <p>...</p>
-                    <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p>
+            <div class="container">
+                <div class="row">
+                    <div class="col-xs-12">
+                        <img id="avatar" src="images/icons8-homer-simpson.svg" alt="">
+                        <h2>START BOOTSTRAP</h2>
+                        <div class="glyphicon glyphicon-star"></div>
+                        <p>GRAPHIC ARTIST - WEB DESIGNER - ILLUSTRATOR</p>
+                    </div>
                 </div>
             </div>
         </div>
-        <section id="skills">
-            <div class="container">
+        <section id="portfolio">
+            <div class="container centra">
                 <div class="row">
-                    <div class="col-xs-12 col-md-6 col-lg-4">.col-md-4</div>
-                    <div class="col-xs-12 col-md-6 col-lg-4">.col-md-4</div>
-                    <div class="col-xs-12 col-md-6 col-lg-4">.col-md-4</div>
+                    <div class="col-xs-12 centra">
+                        <h2>PORTFOLIO</h2>
+                        <div class="glyphicon glyphicon-star"></div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-xs-12 col-md-6 col-lg-4">
+                        <div class="skill-image">
+                            <img src="images/icons8-casa-arryn.svg" alt="">
+                        </div>
+                    </div>
+                    <div class="col-xs-12 col-md-6 col-lg-4">
+                        <div class="skill-image">
+                            <img src="images/icons8-casa-greyjoy.svg" alt="">
+                        </div>
+                    </div>
+                    <div class="col-xs-12 col-md-6 col-lg-4">
+                        <div class="skill-image">
+                            <img src="images/icons8-casa-stark.svg" alt="">
+                        </div>
+                    </div>
                     <div class="clearfix visible-xs-block visible-lg-block"></div>
-                    <div class="col-xs-12 col-md-6 col-lg-4">.col-md-4</div>
-                    <div class="col-xs-12 col-md-6 col-lg-4">.col-md-4</div>
-                    <div class="col-xs-12 col-md-6 col-lg-4">.col-md-4</div>
+                    <div class="col-xs-12 col-md-6 col-lg-4">
+                        <div class="skill-image">
+                            <img src="images/icons8-skyrim.svg" alt="">
+                        </div>
+                    </div>
+                    <div class="col-xs-12 col-md-6 col-lg-4">
+                        <div class="skill-image">
+                            <img src="images/icons8-foresta-512.png" alt="">
+                        </div>
+                    </div>
+                    <div class="col-xs-12 col-md-6 col-lg-4">
+                        <div class="skill-image">
+                            <img src="images/castel-sant-angelo.svg" alt="">
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
@@ -87,61 +90,81 @@
             <div class="container">
                 <div class="row">
                     <div class="col-xs-12 centra">
-
+                        <h2>ABOUT</h2>
+                        <div class="glyphicon glyphicon-star"></div>
                     </div>
                 </div>
                 <div class="row">
                     <div class="col-xs-12 col-md-6">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                        <div class="extra-padding-left">
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                        </div>
                     </div>
                     <div class="col-xs-12 col-md-6">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-                    </div>
+                        <div class="extra-padding-right">
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                        </div>                    </div>
                 </div>
-                <div class="row">
-
+                <div class="row centra">
+                    <button class="btn btn-default" type="submit">Download</button>
                 </div>
             </div>
         </section>
         <section id="contact">
             <div class="container">
-                <div class="centra">
+                <div class="col-xs-12 centra">
                     <h2>CONTACT ME</h2>
+                    <div class="glyphicon glyphicon-star"></div>
                 </div>
                 <form>
-                    <div class="form-group">
-                        <label for="exampleInputEmail1">Email address</label>
-                        <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Email">
+                    <div class="form-group extra-padding-left extra-padding-right">
+                        <label for="name-field">Name</label>
+                        <input type="text" id="name-field">
+                        <hr>
+                        <label for="email-field">Email address</label>
+                        <input type="email" id="email-field">
+                        <hr>
+                        <label for="phone-numb">Telephone Number</label>
+                        <input type="tel" id="phone-numb">
+                        <hr>
+                        <label for="message-content">Message</label>
+                        <textarea type="text" id="message-content"></textarea>
+                        <hr>
+                        <button type="submit" class="btn btn-default">Send</button>
                     </div>
-                    <div class="form-group">
-                        <label for="exampleInputPassword1">Password</label>
-                        <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
-                    </div>
-                    <div class="form-group">
-                        <label for="exampleInputFile">File input</label>
-                        <input type="file" id="exampleInputFile">
-                        <p class="help-block">Example block-level help text here.</p>
-                    </div>
-                    <div class="checkbox">
-                        <label>
-                            <input type="checkbox"> Check me out
-                        </label>
-                    </div>
-                    <button type="submit" class="btn btn-default">Submit</button>
                 </form>
             </div>
         </section>
         <footer class="container-fluid">
             <div class="container">
                 <div class="row">
-                    <div class="col-xs-12 col-md-4">
-
+                    <div class="col-xs-12 col-md-4 centra">
+                        <h3>LOCATION</h3>
+                        <p>2215 John Daniel Drive Clark, MO 54243</p>
                     </div>
-                    <div class="col-xs-12 col-md-4">
-
+                    <div class="col-xs-12 col-md-4 centra">
+                        <h3>AROUND THE WEB</h3>
+                        <div class="contact-icons centra">
+                            <div class="contact-icon">
+                                <a href="#"><img src="images/icons8-f-di-facebook.svg" alt=""></a>
+                            </div>
+                            <div class="contact-icon">
+                                <a href="#"><img src="images/icons8-google-plus.svg" alt=""></a>
+                            </div>
+                            <div class="contact-icon">
+                                <a href="#"><img src="images/icons8-twitter.svg" alt=""></a>
+                            </div>
+                            <div class="contact-icon">
+                                <a href="#"><img src="images/icons8-linkedin-2.svg" alt=""></a>
+                            </div>
+                        </div>
                     </div>
-                    <div class="col-xs-12 col-md-4">
-
+                    <div class="col-xs-12 col-md-4 centra">
+                        <h3>ABOUT FREELANCER</h3>
+                        <p>
+                            Freelance is a free to use, open source Bootstrap theme
+                            created by <a href="#">Start Bootstrap</a>.
+                        </p>
                     </div>
                 </div>
             </div>
@@ -149,9 +172,10 @@
         <div id="copyright" class="container-fluid">
             <div class="row">
                 <div class="col-xs-12 centra">
-                    <p>Copyright</p>
+                    <p>Copyright &copy; Francesco Viterbo 2020</p>
                 </div>
             </div>
         </div>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js" integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd" crossorigin="anonymous"></script>
     </body>
 </html>
